@@ -167,11 +167,11 @@ _slider
 7=language\french\admin.php
 8=class\Slides.php
 9=docs\changelog.txt
-10=language\english\help\help.html
-11=language\french\help\help.html
+10=language\french\help\help.html
+11=language\english\help\help.html
 [Selected Project Files]
 Main=
-Selected=language\french\help\help.html
+Selected=language\english\help\help.html
 [templates\admin\slider_admin_slides.tpl]
 TopLine=18
 Caret=118,34
@@ -188,7 +188,7 @@ Caret=1,49
 TopLine=1
 Caret=1,1
 [blocks\update_theme.php]
-TopLine=162
+TopLine=176
 Caret=27,192
 [templates\blocks\slider_block_update_theme.tpl]
 TopLine=1
@@ -197,14 +197,14 @@ Caret=3,14
 TopLine=86
 Caret=1,96
 [class\Slides.php]
-TopLine=96
+TopLine=103
 Caret=1,129
 [docs\changelog.txt]
 TopLine=1
-Caret=1,17
-[language\english\help\help.html]
-TopLine=1
-Caret=1533,1
+Caret=1,19
 [language\french\help\help.html]
-TopLine=1
-Caret=59,3
+TopLine=53
+Caret=1,22
+[language\english\help\help.html]
+TopLine=38
+Caret=251,20
