@@ -1,14 +1,20 @@
-<div class="outer" id="help-template"> <h1 class="head"> Help: <a class="ui-corner-all tooltip" href="http://xmodules.jubile.fr/%20modules%20/%20slider%20/%20admin%20/%%203C%%207B%20$%20xoops_url%%207D%%203E%20/%20modules%20/%20slider%20/%20admin%20/%20index.php%20" title=" Back to the administration of slider - Slides management " data-mce-href="% 3C% 7B $ xoops_url% 7D% 3E / modules / slider / admin / index.php "> slider - Slides management <img alt=" Back to the Administration of slider - Slides management " src="http://xmodules.jubile.fr%20/modules/slider/admin/%3C%7BxoAdminIcons%20home.png%7D%3E" data-mce-src="% 3C% 7BxoAdminIcons% 20home.png% 7D% 3E "> </a> <br data-mce="" -bogus="1"> </h1> <h4 class="odd"> Description </h4> <p> This module allows you to manage the slides of the home page of the themes used <br> It only works 'with themes of type "xbootstrap". <br> The file "<strong> tpl / slider.tpl </strong>" must exist. <br> It may be necessary to write it to allow its modification. <br data-mce-bogus="1"> </p> <p class="even"> <strong> Features </strong>: <br> </p><ul> <li> Adding, Deleting slides to the home page </li> <li> Activation, deactivation of slides, without deletion </li> <li> Defined the display type: with or without display period </li> <li> Definition of the display order of the slides </li> <li> Definition of a display period to anticipate an event ( recurring parties for example) </li> </ul> <p class="even"> <br> </p> <h4 class="odd"> Install / uninstall </h4> <p class="even"> None
- special measure is needed, follow the process
-standard installation and extract the cursor folder into the
-../modules directory. Install the module through Admin -&gt; Module
-system -&gt; Modules. <br> Detailed instructions on installing modules are available at <a href="http://goo.gl/adT2i" data-mce-href="http://goo.gl/adT2i"> XOOPS Operations Manual </a> <br data-mce-bogus="1"> </p> <p class="even"> <br data-mce-bogus="1"> </p> <h4 class="odd"> Features </h4> <p class="even"> The ModuleBuilder module continues to expand, to get to the conditions to create modules, more and more sophisticated. <br>
- For this reason, I invite all developers to report and send in svn any
-changes or additions to this module, so that we can jointly contribute
-to the development <br> <br> </p> <h4 class="odd"> Tutorial </h4> <p> Once installed, actions to perform: <br data-mce-bogus="1"> </p> <ul> <li> Standard installation &amp; nbsp; module </li> <li> Add slides to the themes used (see "Adding a new slide)" "<br> </li> <li> Activate the module block, regardless of its place it will remain invisible <br> <strong> Important </strong>: the "Show block" option of the block Lists the selected slides <br> 
-</li> </ul> <h4 class="even"> Addition of a new slide </h4> <p class="even"> Title: message displayed on the slide. <br> Description: Message displayed under the title on the slide. <br> Image: Image of the slide. attention check the file size (1920px x 500px for xbootstrap). <br> Active
- : no = The slide will never be displayed. Allows you to activate a slide
-for later use without deleting it, for example for
-recurring parties. <br> Visible: yes = the slide is always displayed - &amp; nbsp; no = the display period must be defined. <br> Start date: date and time of the start of slide display. <br> End date: end date of slide display. <br> Weight
- : define the display order of the slides. If several slides have the
-same weight the alphabetical order of the titles is applied. <br> <br> </p> <h4 class="even"> Treatments </h4> <p class="even"> On the index page several treatments are &amp; nbsp; possible. <br> </p><ul> <li> Reset the original 'tpl / slider.tpl' files of each theme. <br> Disable the slider module block to allow the display of the slides of origin <br> Remove the caches to update the display immediately <br> </li> </ul> <p class="even"> <br> </p><ul> <li> Activate the block which allows updating slides <br> Equivalent to displaying the block in the block manager <br> </li> </ul> <p class="even"> <br data-mce-bogus="1"> </p> <h4 class="even"> Block -&gt; slider_update_tpl <br> </h4> <p class="even"> When the block is activated, the block modifies the file "tpl / slider.tpl" with the slides that have been added. </p> <p class="even"> The update is only carried out if one of the slides has been modified, added or deleted. <br> The original file is saved with the suffix "-old" -&gt; "tlp / slider-old.tpl" <br> It will be reinstalled when uninstalling the module. <br> </p> <p class="even"> <br> </p> </div>
+<p><strong>Help: </strong><strong><a href="http://xmodules.jubile.fr/modules/slider/admin/%3C%7B$xoops_url%7D%3E/modules/slider/admin/index.php" title="Back to the administration of slider - Slides management">slider - Slides management </a></strong></p>
+<p><strong>Description</strong></p>
+<p>This module allows you to manage ; rer the slides of the home page of the themes used <br /> It only works with the "xbootstrap" type themes. <br /> The file "<strong> tpl / slider .tpl </strong>"must exist. <br /> It may be necessary to write to it to allow modification.</p>
+<p><strong>Functionality &lt; / strong&gt;: </strong></p>
+<ul type="disc"><li>Adding, Removing slides &amp; agrave; the home page</li><li>Activation, deactivation of slides, without deletion</li><li>Defines the type of display: with or without display period</li><li>Defining the display order of slides</li><li>Defining a display period to anticipate an event</li></ul><p><br /> <strong>Installation / Uninstallation </strong></p>
+<p>No special measures are necessary, follow the installation process standard and extract the cursor folder to the ../ modules directory. Install the module through Admin - &amp; gt; System module - &amp; gt; Modules. <br /> Detailed instructions on installing modules are available in <a href="http://goo.gl/adT2i">XOOPS Operations Manual </a></p>
+<p>&nbsp;</p>
+<p><strong>Features </strong></p>
+<p>The module "slider" continues to evolve. For this reason, I invite all developers to report and send to the SVN any changes or additions in this module, so that we can jointly contribute to the development</p>
+<p><strong>Tutorial </strong></p>
+<p>Once installed, actions to perform:</p>
+<ul><li>Standard installation of module</li><li>Add slides to the themes used (see "Adding a new slide)" "</li><li>Activate the module block, regardless of its place it will remain invisible <br /> <strong>Important </strong>: the "Show block" option of the block Allows you to list the selected slides <br /> leave it on "No" in production</li></ul><p><strong>Adding a new slide </strong></p>
+<p>Title: message displayed on the slide . <br /> Description: Message displayed under the title on the slide. <br /> Image: Image of the slide. Please check the file size (1920px x 500px for xbootstrap). <br /> Active : no = The slide will never be displayed. Allows you to activate a slide for later use without deleting it er, for example for recurring holidays. <br /> Visible: yes = the slide is always displayed; - &nbsp;no = the display period must be defined. <br /> Start date: date and time when the slide starts to display. <br /> End date: end date of display of the slide. <br /> Weight: defines the order in which the slides are displayed. If several slides have the same weight the alphabetical order of the titles is applied.</p>
+<p><strong>Treatments </strong></p>
+<p>On the index page several treatments are &nbsp;&nbsp;possible.</p>
+<ul><li>Resets the original 'tpl / slider.tpl' files for each theme. <br /> Disable the slider module block to allow display of original slides <br /> Remove caches to refresh display immediately</li></ul><p>&nbsp;</p>
+<ul><li>Activate the block that allows the setting a day of slides <br /> Equivalent to display the block in the block manager</li></ul><p>&nbsp;</p>
+<p><strong>Block - &gt; slider_update_tpl </strong></p>
+<p>When the block is activated, the block modifies the "tpl/slider.tpl" file with the slides that have been used.</p>
+<p>The setting day is done that in the case one of the slides has been modified added or deleted. <br /> The original file is saved; with the suffix "-old" -&gt; "tlp / slider-old.tpl" <br /> It will be re-installed; when uninstalling the module.</p>
