@@ -1,13 +1,22 @@
-<div class="outer" id="help-template"><h1 class="head">Help: <a class="ui-corner-all tooltip" href="http://xmodules.jubile.fr/modules/slider/admin/%3C%7B$xoops_url%7D%3E/modules/slider/admin/index.php" title="Back to the administration of slider - Slides management" data-mce-href="%3C%7B$xoops_url%7D%3E/modules/slider/admin/index.php"> slider - Slides management <img alt="Back to the Administration of slider - Slides management" src="http://xmodules.jubile.fr/modules/slider/admin/%3C%7BxoAdminIcons%20home.png%7D%3E" data-mce-src="%3C%7BxoAdminIcons%20home.png%7D%3E"> </a><br data-mce-bogus="1"></h1><h4 class="odd">Description</h4><p>Ce module permet de gérer les slides de la page d'accueil des thèmes utilisés<br>Il ne fonctionne qu'avec les thème de type "xbootstrap".<br>Le fichier "<strong>tpl/slider.tpl</strong>" doit exister.<br>Il sera peut être nécéssaire de la mettre en écriture pour permettre sa modification.<br data-mce-bogus="1"></p><p class="even"><strong>Fonctionalités</strong> :<br></p><ul><li>Ajout, Suppression de slides à la page d'accueil</li><li>Activation, désactivation des slide, sans supression</li><li> Défini le type d'affichage: avec ou sans période d'affichage</li><li>Définition de l'ordre d'affichage des slides</li><li>Définition d'une période d'affichage pour anticiper un événnement (fêtes récurrentes par exemple)</li></ul><p class="even"> <br></p><h4 class="odd">Install/uninstall</h4><p class="even">Aucune
- mesure particulière n'est nécessaire, suivez le processus 
-d'installation standard et extrayez le dossier du curseur dans le 
-répertoire ../modules. Installez le module via Admin -&gt; Module 
-système -&gt; Modules. <br> Des instructions détaillées sur l'installation des modules sont disponibles dans le <a href="http://goo.gl/adT2i" data-mce-href="http://goo.gl/adT2i">XOOPS Operations Manual</a><br data-mce-bogus="1"></p><p class="even"><br data-mce-bogus="1"></p><h4 class="odd">Features</h4><p class="even">The ModuleBuilder module continues to expand, to get to the conditions to create modules, more and more sophisticated.<br>
- For this reason, I invite all developers to report and send in svn any 
-changes or additions to this module, so that we can jointly contribute 
-to the development <br> <br></p><h4 class="odd">Tutorial</h4><p>Une fois installé, actions à effectuer :<br data-mce-bogus="1"></p><ul><li>Installation standard&nbsp; de module</li><li>Ajouter des slides au thèmes utilisés (voir "Ajout d'un nouveau slide)""<br></li><li>Activer le block du module, peu importe sa place il restera invisible<br><strong>Important</strong> : l'option "Afficher le block" du block Permet de lister les slides sélectionnés<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; à utiliser en mode débugage uniquement<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; laisser la sur "Non" en production</li></ul><h4 class="even">Ajout d'un nouveau slide</h4><p class="even">Titre : message affiché sur le slide.<br>Description : Message affiché sous le titre sur le slide.<br>Image : Image du slide. attention vérfiez la taille des fichiers (1920 px x 500 px pour xbootstrap).<br>Actif
- : non = Le slide ne sera jamais afficher. Permet de sactiver un slide 
-pour une utilisation ultérieure sans le supprimer, par exemple pour les 
-fêtes récurrentes.<br>Visible : oui = le slide est toujours affiché -&nbsp; non = il faut définir la pariode d'affichage.<br>Date de début : date et heure de début d'affichage du slide.<br>Date de fin : date de fin d'affichage du slide.<br>Poids
- : défini l'ordre d'affichage des slides. Si plusieurs slides ont le 
-même poids l'ordre alphabétique des titres est appliqué.<br><br></p><h4 class="even">Traitements</h4><p class="even">Sur la page d'index plusieurs traitements sont&nbsp; possibles.<br></p><ul><li>Rinitialise les fichiers 'tpl/slider.tpl' d'origine de chaque thème.<br>Désactive le block du module slider pour permettre l'affichage des slides d'origine<br>Supprime les caches pour actualiser l'affichage immédiatement<br></li></ul><p class="even"><br></p><ul><li>Activer le block qui permet la mise à jour des slides<br> Equivaut à afficher le block dans le gestionnaire de blocks<br></li></ul><p class="even"><br data-mce-bogus="1"></p><h4 class="even">Block -&gt; slider_update_tpl<br></h4><p class="even">Quand le block est activé, le block modifie le fichier "tpl/slider.tpl" avec les slides qui ont été ajoutés.</p><p class="even">La mise à jour n'est effectué que dans le cas un des slides a éété modifier,ajouter ou supprimé.<br>Le fichier d'origine est sauvegardé avec le le suffixe "-old" -&gt; "tlp/slider-old.tpl"<br>Il sera réinstallé lors de la désinstllation du module.<br></p><p class="even"><br></p></div>
+<p><strong>Help: <a href="http://xmodules.jubile.fr/modules/slider/admin/%3C%7B$xoops_url%7D%3E/modules/slider/admin/index.php" title="Back to the administration of slider - Slides management">slider - Slides management </a><a href="http://xmodules.jubile.fr/modules/slider/admin/%3C%7B$xoops_url%7D%3E/modules/slider/admin/index.php"></a></strong></p>
+<p><strong>Description</strong></p>
+<p>Ce module permet de g&eacute;rer les slides de la page d'accueil des th&egrave;mes utilis&eacute;s<br /> Il ne fonctionne qu'avec les th&egrave;mes de type "xbootstrap".<br /> Le fichier "<strong>tpl/slider.tpl</strong>" doit exister.<br /> Il sera peut-&ecirc;tre n&eacute;cessaire de la mettre en &eacute;criture pour permettre sa modification.</p>
+<p><strong>Fonctionalit&eacute;s</strong> :</p>
+<ul type="disc"><li>Ajout, Supprimer de slides &agrave; la page d'accueil</li><li>Activation, d&eacute;sactivation des slide, sans supression</li><li>D&eacute;fini le type d'affichage: avec ou sans p&eacute;riode d'affichage</li><li>D&eacute;finition de l'ordre d'affichage des slides</li><li>D&eacute;finition d'une p&eacute;riode d'affichage pour anticiper un &eacute;v&eacute;nnement</li></ul><p>&nbsp;</p>
+<p><strong>Installation / D&eacute;sinstallation</strong></p>
+<p>Aucune mesure particuli&egrave;re n'est n&eacute;cessaire, suivez le processus d'installation standard et extrayez le dossier du curseur dans le r&eacute;pertoire../modules. Installez le module via Admin -&gt; Module syst&egrave;me -&gt; Modules. <br /> Des instructions d&eacute;taill&eacute;es sur l'installation des modules sont disponibles dans le <a href="http://goo.gl/adT2i">XOOPS Operations Manual</a></p>
+<p>&nbsp;</p>
+<p><strong>Caract&eacute;ristiques</strong></p>
+<p>Le module &laquo;&nbsp;slider&nbsp;&raquo; continue d&rsquo;&eacute;voluer. Pour cette raison, j'invite tous les d&eacute;veloppeurs &agrave; signaler et envoyer sur le SVN tout changement ou ajout &agrave; ce module, afin que nous puissions contribuer conjointement au d&eacute;veloppement</p>
+<p><strong>Tutorial</strong></p>
+<p>Une fois install&eacute;, actions &agrave; effectuer :</p>
+<ul type="disc"><li>Installation standard&nbsp; de module</li><li>Ajouter des slides au th&egrave;mes utilis&eacute;s (voir "Ajout d'un nouveau slide)""</li><li>Activer le block du module, peu importe sa place il restera invisible<br /> <strong>Important</strong> : l'option "Afficher le block" du block Permet de lister les slides s&eacute;lectionn&eacute;s<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &agrave; utiliser en mode d&eacute;bogage uniquement<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; laisser la sur "Non" en production</li></ul><p><strong>Ajout d'un nouveau slide</strong></p>
+<p>Titre : message affich&eacute; sur le slide.<br /> Description : Message affich&eacute; sous le titre sur le slide.<br /> Image : Image du slide. Attention v&eacute;rifiez la taille des fichiers (1920 px x 500 px pour xbootstrap).<br /> Actif : non = Le slide ne sera jamais afficher. Permet d&rsquo;activer un slide pour une utilisation ult&eacute;rieure sans le supprimer, par exemple pour les f&ecirc;tes r&eacute;currentes.<br /> Visible : oui = le slide est toujours affich&eacute; -&nbsp; non = il faut d&eacute;finir la p&eacute;riode d'affichage.<br /> Date de d&eacute;but : date et heure de d&eacute;but d'affichage du slide.<br /> Date de fin : date de fin d'affichage du slide.<br /> Poids : d&eacute;fini l'ordre d'affichage des slides. Si plusieurs slides ont le m&ecirc;me poids l'ordre alphab&eacute;tique des titres est appliqu&eacute;.</p>
+<p><strong>Traitements</strong></p>
+<p>Sur la page d'index plusieurs traitements sont&nbsp; possibles.</p>
+<ul type="disc"><li>R&eacute;initialise les fichiers 'tpl/slider.tpl' d'origine de chaque th&egrave;me.<br /> D&eacute;sactive le block du module slider pour permettre l'affichage des slides d'origine<br /> Supprime les caches pour actualiser l'affichage imm&eacute;diatement</li></ul><p>&nbsp;</p>
+<ul type="disc"><li>Activer le block qui permet la mise &agrave; jour des slides<br /> Equivaut &agrave; afficher le block dans le gestionnaire de blocks</li></ul><p>&nbsp;</p>
+<p><strong>Block -&gt; slider_update_tpl</strong></p>
+<p>Quand le block est activ&eacute;, le block modifie le fichier "tpl/slider.tpl" avec les slides qui ont &eacute;t&eacute; ajout&eacute;s.</p>
+<p>La mise &agrave; jour n'est effectu&eacute; que dans le cas un des slides a &eacute;t&eacute; modifi&eacute; ajout&eacute; ou supprim&eacute;.<br /> Le fichier d'origine est sauvegard&eacute; avec le le suffixe "-old" -&gt; "tlp/slider-old.tpl"<br /> Il sera r&eacute;install&eacute; lors de la d&eacute;sinstallation du module.</p>
+<p>&nbsp;</p><p>&nbsp;</p>
